SWATCH-4641 Terminate contracts not found in upstream during contract sync
Signed-off-by: Vanessa Busch <vbusch@redhat.com>